# hku-atlas

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/lib/beginner_tutorials/: listener  talker
devel/lib/learning_tf/: frame_tf_broadcaster  turtle_tf_broadcaster  turtle_tf_listener
devel/lib/pkgconfig/: atlas_moveit_config.pc  ball_throwing_tutorial.pc  learning_tf.pc  (+3 more)
docs/: README.md  _config.yml
src/atlas_interface/: package.xml
src/atlas_moveit_config/: .setup_assistant
src/atlas_sim_interface_tutorial/: mainpage.dox  manifest.xml
src/ball_throwing/: atlas.launch  ball_throwing.world
src/ball_throwing_plugin/: ball_throwing.cc  ball_throwing.cc~  package.xml
src/ball_throwing_tutorial/: CMakeLists.txt  atlas.launch  atlas.launch~  ball_throwing.cc  package.xml
src/beginner_tutorials/: CMakeLists.txt  ball_throwing.cc  package.xml~
src/control_mode_switch/: demo.py  manifest.xml
src/drcsim_joint_commands_tutorial/: manifest.xml
src/gazebo_plugin_tutorial/: CMakeLists.txt  ball_throwing.cc
src/joint_animation_tutorial/: manifest.xml
src/learning_tf/: CMakeLists.txt  package.xml
src/planning/: package.xml
src/pr2_moveit_config/: .setup_assistant
src/pr2_moveit_config_now/: .setup_assistant  CMakeLists.txt  package.xml
src/tutorial_atlas_control/: Traj_data2.yaml  manifest.xml  move_atlas_test.py  pub_joint_commands.py  traj_yaml.py
src/world_create_tutorial/: manifest.xml
src/world_modification_tutorial/: mainpage.dox  manifest.xml
(+71 files in other folders)
