<package>

  <name>planning</name>
  <version>0.0.1</version>
  <description>
      Just for fun.
  </description>
  <author email="4481215@115.com">EvanZhang</author>
  <maintainer email="4481215@115.com">EvanZhang</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <build_depend>pr2_description</build_depend>
  <run_depend>pr2_description</run_depend>


</package>
